# ucmq

./: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  genall.sh
client/: Makefile.am  Makefile.in
client/c/: Makefile.am  Makefile.in  example.c  mq_client.c  mq_client.h  object.h
client/php/: CREDITS  config.m4  config.w32  php_ucmq.h  ucmq.c  ucmq.php
client/php/tests/: 001.phpt
conf/: ucmq.ini
source/: Makefile.am  Makefile.in  atomic.h  common.h  config.h.in  crc16.c  crc16.h  file.c  file.h  ini.c  ini.h  internal.h  log.c  log.h  main.c  main.h  mq_config.c  mq_config.h  mq_errno.c  mq_errno.h  mq_evhttp.c  mq_evhttp.h  mq_queue_manage.c  mq_queue_manage.h  mq_store_file.c  mq_store_file.h  mq_store_manage.c  mq_store_manage.h  mq_store_msg.c  mq_store_msg.h  mq_store_rtag.c  mq_store_rtag.h  mq_util.c  mq_util.h  trace.c  util.c  util.h
source/gtest/: Makefile  db_000000000001  test_concurrent.cc  test_delay.cc  test_maxqueue.cc  test_multi_file.cc  test_multi_queue.cc  test_readonly.cc  test_single_file.cc  test_unit.cc  test_url_exception.cc  truncate.c  ucmq_common.c  ucmq_common.h
test/: mq_http_func_test.sh  mq_php_func_test.php  mq_test_by_ab.sh
